# 2023_1_Japanese_gardens_and_landscapes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
.github/workflows/: CI.yml
GameFiles/: Resources.txt  SceneInfo.txt  resourceLocations.txt
configs/: .clang-tidy
include/: Bullet.hpp  DamageZone.hpp  HealthBonus.hpp  HealthComponent.hpp
include/A_lib/: A.hpp
include/AnimeFramework/: AnimeFramework.hpp  Component.hpp  ComponentManager.hpp  Entity.hpp  Event.hpp  EventManager.hpp  GameLoop.hpp  InputManager.hpp  MemoryMaster.hpp  Scene.hpp  SceneManager.hpp
include/AudioSystem/: AudioSource.hpp  AudioSystem.hpp
include/CameraComponent/: Camera.hpp  CameraSystem.hpp
include/Components/: HealthComponent.hpp
include/Entities/: Bullet.hpp  DamageZone.hpp  HealthBonus.hpp  Monster.hpp  Player.hpp  Wall.hpp
include/Graphics/: Animation.hpp  Color.hpp  IDrawTextureWrapper.hpp  ITransposeMathWrapper.hpp  ITrasnposeMathWrapper.hpp  IUiContextWrapper.hpp  IWindow.hpp  Renderer.hpp  Texture.hpp  Transpose.hpp
include/InputManager/: InputManager.hpp
include/Logger/: Logger.hpp
include/Math/: Coords2d.hpp  Graph.hpp  Matrix.hpp  Vector2.hpp
include/OpenAlDependency/: AudioPlayWrapper.hpp
include/OpenGlDependency/: DrawTextureWrapper.hpp  TransposeMathWrapper.hpp  UiContextWrapper.hpp  Window.hpp
include/Physics/: Body.hpp  BodyDefinition.hpp  CollisionHandler.hpp  Manifold.hpp  PhysicsSystem.hpp  PhysicsWorld.hpp  Shape.hpp
include/SpriteComponent/: Sprite.hpp  SpriteSystem.hpp
include/Systems/: ISystem.hpp  SystemManager.hpp
include/UiColorElementComponent/: UiColorElement.hpp  UiColorElementSystem.hpp
include/UiElementComponent/: UiElement.hpp  UiElementSystem.hpp
include/UiLabelComponent/: UiLabel.hpp  UiLabelSystem.hpp
include/UiTextureElementComponent/: UiTextureElement.hpp  UiTextureElementSystem.hpp
libs/AnimeDefendersEngine/: CMakeLists.txt
libs/AnimeDefendersEngine/configs/: .clang-format  .clang-tidy
libs/AnimeDefendersEngine/include/AnimeFramework/: AnimeFramework.hpp  BaseComponent.hpp  Component.hpp  ComponentManager.hpp  Entity.hpp  Event.hpp  EventListener.hpp  EventManager.hpp  GameLoop.hpp  IEntityCreator.hpp  InputManager.hpp  MemoryMaster.hpp  Scene.hpp  SceneLoader.hpp  SceneManager.hpp
libs/AnimeDefendersEngine/include/AudioSystem/: AudioSource.hpp
libs/AnimeDefendersEngine/include/CameraComponent/: Camera.hpp  CameraSystem.hpp
libs/AnimeDefendersEngine/include/FileSystem/: FileSystem.hpp  TableReader.hpp
libs/AnimeDefendersEngine/include/Graphics/: Animation.hpp  Color.hpp  IDrawTextureWrapper.hpp  ITransposeMathWrapper.hpp  IWindow.hpp  Renderer.hpp  Texture.hpp  Transform.hpp  Transpose.hpp
libs/AnimeDefendersEngine/include/InputComponent/: InputComponent.hpp
libs/AnimeDefendersEngine/include/Logger/: Logger.hpp
libs/AnimeDefendersEngine/include/Math/: Coords2d.hpp  Coords3d.hpp  Graph.hpp  Matrix2d.hpp  Transpose.hpp  Vector2.hpp  Vector2f.hpp
libs/AnimeDefendersEngine/include/OnFixedUpdateComponent/: OnFixedUpdateComponent.hpp  OnFixedUpdateSystem.hpp
libs/AnimeDefendersEngine/include/OpenAlDependency/: AudioPlayWrapper.hpp
libs/AnimeDefendersEngine/include/OpenGlDependency/: DrawTextureWrapper.hpp  TransposeMathWrapper.hpp  UiContextWrapper.hpp  Window.hpp
libs/AnimeDefendersEngine/include/Physics/: Body.hpp  BodyDefinition.hpp  Collider2DComponent.hpp  ColliderComponent.hpp  CollisionHandler.hpp  Contact.hpp  ContactEvent.hpp  ICollisionHandler.hpp  Manifold.hpp  PhysicsSystem.hpp  PhysicsWorld.hpp  RigidBody2DComponent.hpp  RigidBodyComponent.hpp  Shape.hpp  TransformComponent.hpp
libs/AnimeDefendersEngine/include/SpriteComponent/: Sprite.hpp  SpriteSystem.hpp
libs/AnimeDefendersEngine/include/Systems/: ISystem.hpp  ISystemManager.hpp  SystemManager.hpp
libs/AnimeDefendersEngine/include/UiColorElementComponent/: UiColorElement.hpp
libs/AnimeDefendersEngine/include/UiElementComponent/: UiElement.hpp  UiElementSystem.hpp
libs/AnimeDefendersEngine/include/UiLabelComponent/: UiLabel.hpp  UiLabelSystem.hpp
libs/AnimeDefendersEngine/include/UiTextureElementComponent/: UiTextureElementSystem.hpp
libs/AnimeDefendersEngine/libs/stb/: CMakeLists.txt  stb_image.cpp
libs/AnimeDefendersEngine/src/: main.cpp
libs/AnimeDefendersEngine/src/AnimeFramework/: AnimeFramework.cpp  Component.cpp  ComponentManager.cpp  Entity.cpp  EventListener.cpp  EventManager.cpp  GameLoop.cpp  InputManager.cpp  Scene.cpp  SceneLoader.cpp  SceneManager.cpp
libs/AnimeDefendersEngine/src/AudioSystem/: AudioSource.cpp  AudioSystem.cpp
libs/AnimeDefendersEngine/src/CameraComponent/: Camera.cpp  CameraSystem.cpp
libs/AnimeDefendersEngine/src/FileSystem/: FileSystem.cpp  TableReader.cpp
libs/AnimeDefendersEngine/src/Graphics/: Renderer.cpp
libs/AnimeDefendersEngine/src/Logger/: Logger.cpp
libs/AnimeDefendersEngine/src/Math/: Vector2.cpp  Vector2f.cpp
libs/AnimeDefendersEngine/src/OnFixedUpdateComponent/: OnFixedUpdateComponent.cpp  OnFixedUpdateSystem.cpp
libs/AnimeDefendersEngine/src/OpenAlDependency/: AudioPlayWrapper.cpp
libs/AnimeDefendersEngine/src/OpenGlDependency/: DrawTextureWrapper.cpp  TransposeMathWrapper.cpp  UiContextWrapper.cpp  Window.cpp
libs/AnimeDefendersEngine/src/Physics/: Body.cpp  BodyDefinition.cpp  ColliderComponent.cpp  CollisionHandler.cpp  Contact.cpp  Manifold.cpp  PhysicsSystem.cpp  PhysicsWorld.cpp  Shape.cpp
libs/AnimeDefendersEngine/src/SpriteComponent/: Sprite.cpp  SpriteSystem.cpp
libs/AnimeDefendersEngine/src/Systems/: SystemManager.cpp
libs/AnimeDefendersEngine/src/UiElementComponent/: UiElementSystem.cpp
libs/AnimeDefendersEngine/src/UiTextureElementComponent/: UiTextureElement.cpp
src/: HealthBonus.cpp  main.cpp
src/A_lib/: A.cpp
src/AnimeFramework/: AnimeFramework.cpp  ComponentManager.cpp  Entity.cpp  EventManager.cpp  GameLoop.cpp  InputManager.cpp  Scene.cpp  SceneManager.cpp
tests/: A.cpp  AnimeFramework.cpp  CMakeLists.txt  Camera.cpp  CollisionHandler.cpp  PhysicsSystem.cpp  PhysicsWorld.cpp  Renderer.cpp  Sprite.cpp
(+40 files in other folders)
